# agentsync-vcs

./: README.md  index.html  pyproject.toml  setup.html
docs/: adapters.md  examples.md  index.md
src/agentsync_vcs/: main.py
src/agentsync_vcs/adapters/: hermes.py  kiro.py
tests/: test_cli.py
